[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["LevBratisman <leobratisman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
flake8 = "^7.0.0"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
